# Wood-Code

./: .gitattributes  .gitignore  .neocmake.toml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.cmd  build.sh  woodcode.cpp
.github/workflows/: release.yaml
help/: app.help  decode.help  encode.help  help.help  woodcode.help
include/: woodcode.h
src/: cli.cpp  main.cpp  woodcode.cpp  woodcode.h
tests/: tests.cpp
